final/redis-slave-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-slave
  labels:
    app: redis
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redis
      role: slave
  template:
    metadata:
      labels:
        app: redis
        role: slave
    spec:
      containers:
      - name: redis
        image: redis
        command: ["redis-server", "--slaveof", "redis-master", "6379"]
        ports:
        - containerPort: 6379
