final/redis-master-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  labels:
    app: redis
    role: master
spec:
  type: ClusterIP
  selector:
    app: redis
    role: master
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
