final/redis-slave-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  labels:
    app: redis
    role: slave
spec:
  type: ClusterIP
  selector:
    app: redis
    role: slave
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
